# mcsl

./: CMakeLists.txt  LICENSE  McslConfig.cmake.in  README.md
.github/workflows/: build.yml
cmake/: Fmtlib.cmake  GoogleTest.cmake
include/mcsl/: common.h  string.h  string_view.h
src/: char_traits.c  char_traits.h  string_view.c
test/: CMakeLists.txt
test/fuzzy/: CMakeLists.txt  string_view_fuzzy_test.hpp  sv_find.cpp  sv_find_from_position.cpp  sv_rfind.cpp  sv_rfind_from_position.cpp
test/unit/: CMakeLists.txt  string_view_tests.cpp
